Form-Input added v0.2

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,10 @@
         </label>
         <label>
           How do you rate our work?
-          <input type="range" value="0" max="10">
+          <input type="range"
+          value="0"
+          max="10"
+          >
         </label>
       </fieldset>
       <fieldset class="fieldset">
