--- a/src/index.html
+++ b/src/index.html
@@ -11,26 +11,31 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post" >
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="post"
+      >
       <fieldset class="fieldset">
         <legend>Personal information</legend>
-        <label class="labels">
+        <label class="label">
           Surname:
-          <input type="text"
+          <input
+            type="text"
             name="surname"
             required
             autocomplete="off"
           >
         </label>
-        <label class="labels">
+        <label class="label">
           Name:
-          <input type="text"
+          <input
+            type="text"
             name="name"
             required
             autocomplete="off"
           >
         </label>
-        <label class="labels">
+        <label class="label">
           How old are You?
           <input
             type="number"
@@ -40,14 +45,14 @@
             value="12"
           >
         </label>
-        <label class="labels">
+        <label class="label">
           Full date of birth:
           <input
             type="date"
             name="date-of-birth"
           >
         </label>
-        <label>
+        <label class="label">
           I accept the term of the agreement
           <input
             type="checkbox"
@@ -57,7 +62,7 @@
       </fieldset>
       <fieldset class="fieldset">
         <legend>Registration</legend>
-        <label class="labels">
+        <label class="label">
           E-mail:
           <input
             type="email"
@@ -67,9 +72,10 @@
             autocomplete="off"
           >
         </label>
-        <label>
+        <label class="label">
           Password:
-          <input type="password"
+          <input
+            type="password"
             name="password"
             required
             autocomplete="off"
@@ -78,30 +84,32 @@
       </fieldset>
       <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
-        <div class="labels">
+        <div class="label">
           Do you love cats?
           <label>
-            <input type="radio"
+            <input
+              type="radio"
               name="cats"
               value="yes"
             > Yes
           </label>
           <label>
-            <input type="radio"
+            <input
+              type="radio"
               name="cats"
               value="no"
             > No
           </label>
         </div>
-        <label class="labels">
+        <label class="label">
           What is your favorite color?
           <input type="color" name="color">
         </label>
-        <label class="labels">
+        <label class="label">
           What time do you go to bed?
           <input type="time" name="bedtime">
         </label>
-        <label class="labels">
+        <label class="label">
           What are your favorite brand of cars?
           <select name="cars" multiple>
             <option value="BMW">BMW</option>
@@ -109,9 +117,10 @@
             <option value="Lada">Lada</option>
           </select>
         </label>
-        <label>
+        <label class="label">
           How do you rate our work?
-          <input type="range"
+          <input
+            type="range"
             value="0"
             max="10"
           >
@@ -119,11 +128,11 @@
       </fieldset>
       <fieldset class="fieldset">
         <legend>Additional info:</legend>
-        <label class="labels">
+        <label class="label">
           Comments:
           <textarea name="comments" autocomplete="off"></textarea>
         </label>
-        <label>
+        <label class="label">
           Would you recommend us?
           <select name="yes/no">
             <option value="yes">yes</option>
